--- a/front/fonts.css
+++ b/front/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 100;
     src: local("Rubik Thin"), local("Rubik-Thin"), url("./fonts/Rubik/Rubik-Thin.woff2") format("woff2");
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 100;
     src: local("Rubik Thin Italic"), local("Rubik-ThinItalic"), url("./fonts/Rubik/Rubik-ThinItalic.woff2") format("woff2");
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 200;
     src: local("Rubik ExtraLight"), local("Rubik-ExtraLight"), url("./fonts/Rubik/Rubik-ExtraLight.woff2") format("woff2");
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 200;
     src: local("Rubik ExtraLight Italic"), local("Rubik-ExtraLightItalic"), url("./fonts/Rubik/Rubik-ExtraLightItalic.woff2") format("woff2");
@@ -31,7 +31,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 300;
     src: local("Rubik Light"), local("Rubik-Light"), url("./fonts/Rubik/Rubik-Light.woff2") format("woff2");
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 300;
     src: local("Rubik Light Italic"), local("Rubik-LightItalic"), url("./fonts/Rubik/Rubik-LightItalic.woff2") format("woff2");
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 400;
     src: local("Rubik Regular"), local("Rubik-Regular"), url("./fonts/Rubik/Rubik-Regular.woff2") format("woff2");
@@ -55,7 +55,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 400;
     src: local("Rubik Italic"), local("Rubik-Italic"), url("./fonts/Rubik/Rubik-Italic.woff2") format("woff2");
@@ -63,7 +63,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 500;
     src: local("Rubik Medium"), local("Rubik-Medium"), url("./fonts/Rubik/Rubik-Medium.woff2") format("woff2");
@@ -71,7 +71,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 500;
     src: local("Rubik Medium Italic"), local("Rubik-MediumItalic"), url("./fonts/Rubik/Rubik-MediumItalic.woff2") format("woff2");
@@ -79,7 +79,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 700;
     src: local("Rubik Bold"), local("Rubik-Bold"), url("./fonts/Rubik/Rubik-Bold.woff2") format("woff2");
@@ -87,7 +87,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 700;
     src: local("Rubik Bold Italic"), local("Rubik-BoldItalic"), url("./fonts/Rubik/Rubik-BoldItalic.woff2") format("woff2");
@@ -95,7 +95,7 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 800;
     src: local("Rubik ExtraBold"), local("Rubik-ExtraBold"), url("./fonts/Rubik/Rubik-ExtraBold.woff2") format("woff2");
@@ -103,9 +103,17 @@
 }
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: italic;
     font-weight: 800;
     src: local("Rubik ExtraBold Italic"), local("Rubik-ExtraBoldItalic"), url("./fonts/Rubik/Rubik-ExtraBoldItalic.woff2") format("woff2");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "CTMKF";
+    font-style: normal;
+    font-weight: 400;
+    src: local("CTMKF Regular"), local("CTMKF-Regular"), url("./fonts/CTMKF/ctmkf.woff2") format("woff2");
     font-display: swap;
 }
