--- a/front/style.css
+++ b/front/style.css
@@ -100,6 +100,13 @@ hr {
     margin-right: 1ch;
 }
 
+#no-data {
+    text-align: center;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    font-weight: 400;
+}
+
 .upspan {
     font-variant-numeric: tabular-nums;
 }
