Use symbols for OH status

--- a/front/fonts.css
+++ b/front/fonts.css
@@ -1,4 +1,12 @@
 @font-face {
+    font-family: "CTMKF";
+    font-style: normal;
+    font-weight: 400;
+    src: local("CTMKF Regular"), local("CTMKF-Regular"), url("./fonts/CTMKF/ctmkf.woff2") format("woff2");
+    font-display: swap;
+}
+
+@font-face {
     font-family: "Rubik";
     font-style: normal;
     font-weight: 100;
@@ -111,9 +119,9 @@
 }
 
 @font-face {
-    font-family: "CTMKF";
+    font-family: "JetBrains Mono";
     font-style: normal;
     font-weight: 400;
-    src: local("CTMKF Regular"), local("CTMKF-Regular"), url("./fonts/CTMKF/ctmkf.woff2") format("woff2");
-    font-display: swap;
+    src: local("JetBrains Mono Regular"), local("JetBrainsMono-Regular"), url("./fonts/JetBrainsMono/JetBrainsMono-Regular.woff2") format("woff2");
+    font-display: swap;  
 }
